--- a/src/assets/styles/flashflex/components/_group-steps.scss
+++ b/src/assets/styles/flashflex/components/_group-steps.scss
@@ -24,6 +24,10 @@
 			padding-bottom: p(60);
 			border-bottom: 1px solid $color-border;
 		}
+
+		&.space-small {
+			padding-bottom: p(35);
+		}
 		
 		.step {
 			margin-bottom: p(20);
