--- a/src/assets/styles/flashflex/components/_inbox-message.scss
+++ b/src/assets/styles/flashflex/components/_inbox-message.scss
@@ -28,7 +28,7 @@
 	}
 
 	.message-header {
-		margin-bottom: p(30);
+		margin-bottom: p(20);
 
 		.user {
 			display: flex;
